gitops/manifests/tuwunel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tuwunel
spec:
  ingressClassName: traefik
  rules:
    - host: myown-tuwunel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tuwunel
                port:
                  number: 8008
